--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -87,7 +88,7 @@ ul {
 .header {
     width: 100%;
     height: 50px;
-    background-color: #FFF;
+    background-color: #F5F5F5;
     margin-top: 0px;
     display: flex;
     justify-content:space-between;
@@ -107,7 +108,9 @@ ul {
 .header__menu ul {
     display: flex;
     justify-content: flex-end;
-    margin: 0 30px 0 0;  
+    margin: 0 30px 0 0; 
+    font-weight: bold;
+    letter-spacing: 1px; 
   }
 
 .links__menu {  
@@ -121,9 +124,9 @@ ul {
 
 .pesquisar{
     width: 98,5vw;
-    height: 30vh;
-    margin: 0 auto 20px;
-    background-image: radial-gradient(circle at 77% 43%, rgba(168, 168, 168, 0.04) 0%, rgba(168, 168, 168, 0.04) 50%, rgba(10, 10, 10, 0.04) 50%, rgba(10, 10, 10, 0.04) 100%), radial-gradient(circle at 33% 65%, rgba(248, 248, 248, 0.04) 0%, rgba(248, 248, 248, 0.04) 50%, rgba(228, 228, 228, 0.04) 50%, rgba(228, 228, 228, 0.04) 100%), radial-gradient(circle at 92% 79%, rgba(152, 152, 152, 0.04) 0%, rgba(152, 152, 152, 0.04) 50%, rgba(28, 28, 28, 0.04) 50%, rgba(28, 28, 28, 0.04) 100%), radial-gradient(circle at 91% 13%, rgba(41, 41, 41, 0.04) 0%, rgba(41, 41, 41, 0.04) 50%, rgba(214, 214, 214, 0.04) 50%, rgba(214, 214, 214, 0.04) 100%), linear-gradient(270deg, rgb(242, 116, 5), rgb(5, 199, 242));
+    height: 110vh;
+    margin: 0 auto 0px;
+    background-image: url(../img/familiaviaem.jpg);
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -132,16 +135,19 @@ ul {
 .pesquisar h2{
     color: #fff;
     margin: 30px 0 5px 25px;
-    font-size: 1.8rem;
+    font-size: 3.8rem;
+    letter-spacing: 2px;
 }
 
 .base {
     width: 85vw;
-    height:10vh;
-    margin: 10px auto;
-    background-color: rgb(5, 199, 242);
+    height:15vh;
+    margin: 150px auto;
+    padding: 15px;
+    background-color:	#87CEEB;
     display: flex;
     justify-content: center;
+    border-radius: 10px;
 }
 
 .tipo{
@@ -166,6 +172,7 @@ ul {
     /* background-color: #FFF; */
     margin: 5px ;
     display:flex;
+    gap: 5px;
 }
 
 .tipo_de_viagem,
@@ -177,6 +184,8 @@ ul {
     padding: 3px 5px;
     color: #F24405;
     border: none;
+    border-radius: 5px;
+    font-weight: bold;
 }
 
 ::placeholder{
@@ -196,6 +205,7 @@ ul {
     font-size: 1.8rem;
     color: #FFF;
     margin-top: 10px;
+    align-items: center;
 }
 
 .botao:hover{
@@ -474,6 +484,7 @@ a {
     width: 100%;
     height: 10vh;
     display: flex;
+    padding: 50px;
     flex-direction: column;
     align-items: center;
     background-image: radial-gradient(circle at 77% 43%, rgba(168, 168, 168, 0.04) 0%, rgba(168, 168, 168, 0.04) 50%, rgba(10, 10, 10, 0.04) 50%, rgba(10, 10, 10, 0.04) 100%), radial-gradient(circle at 33% 65%, rgba(248, 248, 248, 0.04) 0%, rgba(248, 248, 248, 0.04) 50%, rgba(228, 228, 228, 0.04) 50%, rgba(228, 228, 228, 0.04) 100%), radial-gradient(circle at 92% 79%, rgba(152, 152, 152, 0.04) 0%, rgba(152, 152, 152, 0.04) 50%, rgba(28, 28, 28, 0.04) 50%, rgba(28, 28, 28, 0.04) 100%), radial-gradient(circle at 91% 13%, rgba(41, 41, 41, 0.04) 0%, rgba(41, 41, 41, 0.04) 50%, rgba(214, 214, 214, 0.04) 50%, rgba(214, 214, 214, 0.04) 100%), linear-gradient(270deg, rgb(242, 116, 5), rgb(5, 199, 242));
